--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "transform"
   ],
   "dependencies": {
-    "@uu-cdh/backbone-util": "github:CentreForDigitalHumanities/backbone-util#release/0.1.0",
+    "@uu-cdh/backbone-util": "^0.1.1",
     "backbone": "^1.6.0",
     "underscore": "^1.13.6"
   },
